<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessInputActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTvDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:inputType="none|text"
        android:minHeight="48dp"
        android:text= "@string/display_result"
        android:textAlignment="center"
        android:textColor="#C2185B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mtCardInput"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTvDisplay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtEndText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10sp"
                android:text="@string/see_the_result_of_your_input"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtDisplayName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtDisplaySumResult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtDisplaySumResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textAlignment="viewStart"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDisplayName"
                tools:ignore="SpeakableTextPresentCheck">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendResult"
                android:layout_width="210dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:padding="10sp"
                android:text="@string/home"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDisplaySumResult"
                app:strokeColor="#0288D1"
                app:strokeWidth="5sp">

            </com.google.android.material.button.MaterialButton>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>